# hypotest-python3-sdk

./: .gitignore  README.md  pyproject.toml
hypotest_python3_sdk/: __init__.py  config.py  experiment_settings.py  ht_connector.py  hypotest.py  logger.py  pymmh3.py  retrieve_experiments.py  routing.py  send_events.py  utils.py  variant.py
tests/: test_hypotest_python3_sdk.py
