[tool.poetry]
name = "hypotest-python3-sdk"
version = "1.0.2"
description = ""
authors = ["lior brafman <liorb87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.4"
PyJWT = "^2.3.0"
requests = "^2.27.1"
pip-licenses = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
