[tool.poetry]
name = "hypotest-python3-sdk"
version = "1.0.9"
description = ""
authors = ["lior brafman <liorb87@gmail.com>"]
maintainers = ["Lior Brafman <liorb87@gmail.com>"]
license = "Apache-2.0 License"
readme = "README.md"
homepage = "https://github.com/HypoTest-io/hypotest-python3-sdk"
repository = "https://github.com/HypoTest-io/hypotest-python3-sdk"
documentation = "https://github.com/HypoTest-io/hypotest-python3-sdk"
keywords = ["ab testing", "experiment", "platform experimentation"]

[tool.poetry.dependencies]
python = "^3.4"
PyJWT = "^2.3.0"
requests = "^2.27.1"
pip-licenses = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
